Some recipe and serializer fixes